{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 61,
  "lineage": "00ec1eb4-fcae-bdf5-0e27-ba0ba6e9651b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "team3_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/loadBalancers/team3-lb/frontendIPConfigurations/lbpublicip",
                "name": "lbpublicip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/publicIPAddresses/team3-loadip"
              }
            ],
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/loadBalancers/team3-lb",
            "location": "koreacentral",
            "name": "team3-lb",
            "resource_group_name": "04-3team-bookey",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.team3_loadip",
            "azurerm_resource_group.team3_rg",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "team3_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/loadBalancers/team3-lb/backendAddressPools/team3-back",
            "loadbalancer_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/loadBalancers/team3-lb",
            "name": "team3-back"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.team3_lb",
            "azurerm_public_ip.team3_loadip",
            "azurerm_resource_group.team3_rg",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "team3_lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/loadBalancers/team3-lb/probes/team3-lb-probe",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/loadBalancers/team3-lb",
            "name": "team3-lb-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/health.html"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.team3_lb",
            "azurerm_public_ip.team3_loadip",
            "azurerm_resource_group.team3_rg",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "team3_lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/loadBalancers/team3-lb/backendAddressPools/team3-back"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "floating_ip_enabled": false,
            "frontend_ip_configuration_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/loadBalancers/team3-lb/frontendIPConfigurations/lbpublicip",
            "frontend_ip_configuration_name": "lbpublicip",
            "frontend_port": 80,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/loadBalancers/team3-lb/loadBalancingRules/team3-lb-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/loadBalancers/team3-lb",
            "name": "team3-lb-rule",
            "probe_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/loadBalancers/team3-lb/probes/team3-lb-probe",
            "protocol": "Tcp",
            "tcp_reset_enabled": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.team3_lb",
            "azurerm_lb_backend_address_pool.team3_back",
            "azurerm_lb_probe.team3_lb_probe",
            "azurerm_public_ip.team3_loadip",
            "azurerm_resource_group.team3_rg",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "team3_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/natGateways/team3-nat",
            "idle_timeout_in_minutes": 4,
            "location": "koreacentral",
            "name": "team3-nat",
            "resource_group_name": "04-3team-bookey",
            "resource_guid": "12d888b4-7a14-4499-b5b8-9f92a5fd864f",
            "sku_name": "Standard"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "team3-nat",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.team3_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "team3_nat_pubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/natGateways/team3-nat|/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/publicIPAddresses/team3-natip",
            "nat_gateway_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/natGateways/team3-nat",
            "public_ip_address_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/publicIPAddresses/team3-natip"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.team3_nat",
            "azurerm_public_ip.team3_natip",
            "azurerm_resource_group.team3_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "team3_bas_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkInterfaces/team3-bas-nic",
            "internal_domain_name_suffix": "wux3adhrw0oudjg1afv5oxsjgg.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "team3-bas-nic-ipconf",
                "primary": true,
                "private_ip_address": "20.0.0.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/publicIPAddresses/team3-pubip",
                "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet2/subnets/team3-bas"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "koreacentral",
            "name": "team3-bas-nic",
            "private_ip_address": "20.0.0.4",
            "private_ip_addresses": [
              "20.0.0.4"
            ],
            "resource_group_name": "04-3team-bookey"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "team3-bas-nic",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_public_ip.team3_basip",
            "azurerm_resource_group.team3_rg",
            "azurerm_subnet.team3_bas",
            "azurerm_virtual_network.team3_vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "team3_db_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkInterfaces/team3-db-nic",
            "internal_domain_name_suffix": "ppx5w223ihtefiryrtkhira1xa.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "team3-db-nic-ipconf",
                "primary": true,
                "private_ip_address": "10.0.4.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet1/subnets/team3-db"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "koreacentral",
            "name": "team3-db-nic",
            "private_ip_address": "10.0.4.4",
            "private_ip_addresses": [
              "10.0.4.4"
            ],
            "resource_group_name": "04-3team-bookey"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "team3-db-nic",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.team3_rg",
            "azurerm_subnet.team3_db",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "team3_ftp_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkInterfaces/team3-ftp-nic",
            "internal_domain_name_suffix": "ppx5w223ihtefiryrtkhira1xa.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "team3-ftp-nic-ipconf",
                "primary": true,
                "private_ip_address": "10.0.6.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet1/subnets/team3-ftp"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "koreacentral",
            "name": "team3-ftp-nic",
            "private_ip_address": "10.0.6.4",
            "private_ip_addresses": [
              "10.0.6.4"
            ],
            "resource_group_name": "04-3team-bookey"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "team3-ftp-nic",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.team3_rg",
            "azurerm_subnet.team3_ftp",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "team3_web1_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkInterfaces/team3-web1-nic",
            "internal_domain_name_suffix": "ppx5w223ihtefiryrtkhira1xa.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "team3-web1-nic-ipconf",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet1/subnets/team3-web1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "koreacentral",
            "name": "team3-web1-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "04-3team-bookey"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "team3-web1-nic",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.team3_rg",
            "azurerm_subnet.team3_web1",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "team3_web2_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkInterfaces/team3-web2-nic",
            "internal_domain_name_suffix": "ppx5w223ihtefiryrtkhira1xa.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "team3-web2-nic-ipconf",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet1/subnets/team3-web2"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "koreacentral",
            "name": "team3-web2-nic",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "04-3team-bookey"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "team3-web2-nic",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.team3_rg",
            "azurerm_subnet.team3_web2",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "team3_lbback1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/loadBalancers/team3-lb/backendAddressPools/team3-back",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkInterfaces/team3-web1-nic/ipConfigurations/team3-web1-nic-ipconf|/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/loadBalancers/team3-lb/backendAddressPools/team3-back",
            "ip_configuration_name": "team3-web1-nic-ipconf",
            "network_interface_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkInterfaces/team3-web1-nic"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.team3_lb",
            "azurerm_lb_backend_address_pool.team3_back",
            "azurerm_network_interface.team3_web1_nic",
            "azurerm_public_ip.team3_loadip",
            "azurerm_resource_group.team3_rg",
            "azurerm_subnet.team3_web1",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "team3_lbback2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/loadBalancers/team3-lb/backendAddressPools/team3-back",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkInterfaces/team3-web2-nic/ipConfigurations/team3-web2-nic-ipconf|/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/loadBalancers/team3-lb/backendAddressPools/team3-back",
            "ip_configuration_name": "team3-web2-nic-ipconf",
            "network_interface_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkInterfaces/team3-web2-nic"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.team3_lb",
            "azurerm_lb_backend_address_pool.team3_back",
            "azurerm_network_interface.team3_web2_nic",
            "azurerm_public_ip.team3_loadip",
            "azurerm_resource_group.team3_rg",
            "azurerm_subnet.team3_web2",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "team3_bassg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkInterfaces/team3-bas-nic|/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkSecurityGroups/team3-nsg-ssh",
            "network_interface_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkInterfaces/team3-bas-nic",
            "network_security_group_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkSecurityGroups/team3-nsg-ssh"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.team3_bas_nic",
            "azurerm_network_security_group.team3_nsg_ssh",
            "azurerm_public_ip.team3_basip",
            "azurerm_resource_group.team3_rg",
            "azurerm_subnet.team3_bas",
            "azurerm_virtual_network.team3_vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "team3_dbsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkInterfaces/team3-db-nic|/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkSecurityGroups/team3-nsg-db",
            "network_interface_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkInterfaces/team3-db-nic",
            "network_security_group_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkSecurityGroups/team3-nsg-db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.team3_db_nic",
            "azurerm_network_security_group.team3_nsg_db",
            "azurerm_resource_group.team3_rg",
            "azurerm_subnet.team3_db",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "team3_ftp_nic_vpn_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkInterfaces/team3-ftp-nic|/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkSecurityGroups/team3-vpn-ftp-nsg",
            "network_interface_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkInterfaces/team3-ftp-nic",
            "network_security_group_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkSecurityGroups/team3-vpn-ftp-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.team3_ftp_nic",
            "azurerm_network_security_group.team3_vpn_ftp_nsg",
            "azurerm_resource_group.team3_rg",
            "azurerm_subnet.team3_ftp",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "team3_web1sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkInterfaces/team3-web1-nic|/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkSecurityGroups/team3-nsg-http",
            "network_interface_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkInterfaces/team3-web1-nic",
            "network_security_group_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkSecurityGroups/team3-nsg-http"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.team3_web1_nic",
            "azurerm_network_security_group.team3_nsg_http",
            "azurerm_resource_group.team3_rg",
            "azurerm_subnet.team3_web1",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "team3_web2sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkInterfaces/team3-web2-nic|/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkSecurityGroups/team3-nsg-http",
            "network_interface_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkInterfaces/team3-web2-nic",
            "network_security_group_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkSecurityGroups/team3-nsg-http"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.team3_web2_nic",
            "azurerm_network_security_group.team3_nsg_http",
            "azurerm_resource_group.team3_rg",
            "azurerm_subnet.team3_web2",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "team3_nsg_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkSecurityGroups/team3-nsg-db",
            "location": "koreacentral",
            "name": "team3-nsg-db",
            "resource_group_name": "04-3team-bookey",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "3306"
                ],
                "direction": "Inbound",
                "name": "ssh-db",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "team3-nsg-db",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.team3_rg",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "team3_nsg_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkSecurityGroups/team3-nsg-http",
            "location": "koreacentral",
            "name": "team3-nsg-http",
            "resource_group_name": "04-3team-bookey",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "80"
                ],
                "direction": "Inbound",
                "name": "ssh-http",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "team3-nsg-http",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.team3_rg",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "team3_nsg_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkSecurityGroups/team3-nsg-ssh",
            "location": "koreacentral",
            "name": "team3-nsg-ssh",
            "resource_group_name": "04-3team-bookey",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "20.0.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.0.0/16",
                  "61.108.60.26"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "team3-nsg-ssh",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.team3_rg",
            "azurerm_virtual_network.team3_vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "team3_vpn_ftp_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkSecurityGroups/team3-vpn-ftp-nsg",
            "location": "koreacentral",
            "name": "team3-vpn-ftp-nsg",
            "resource_group_name": "04-3team-bookey",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "team3-vpn-ftp-nsg",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.team3_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vpn_rule_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkSecurityGroups/team3-vpn-ftp-nsg/securityRules/Allow-ICMP-from-VPN-Client",
            "name": "Allow-ICMP-from-VPN-Client",
            "network_security_group_name": "team3-vpn-ftp-nsg",
            "priority": 106,
            "protocol": "Icmp",
            "resource_group_name": "04-3team-bookey",
            "source_address_prefix": "172.16.201.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-ICMP-from-VPN-Client",
            "network_security_group_name": "team3-vpn-ftp-nsg",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_network_security_group.team3_vpn_ftp_nsg",
            "azurerm_public_ip.team3_vpn_ip",
            "azurerm_resource_group.team3_rg",
            "azurerm_subnet.team3_gateway_subnet",
            "azurerm_virtual_network.team3_vnet1",
            "azurerm_virtual_network_gateway.team3_vpn_gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vpn_rule_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/networkSecurityGroups/team3-vpn-ftp-nsg/securityRules/Allow-SSH-from-VPN-Client",
            "name": "Allow-SSH-from-VPN-Client",
            "network_security_group_name": "team3-vpn-ftp-nsg",
            "priority": 105,
            "protocol": "Tcp",
            "resource_group_name": "04-3team-bookey",
            "source_address_prefix": "172.16.201.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-SSH-from-VPN-Client",
            "network_security_group_name": "team3-vpn-ftp-nsg",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_network_security_group.team3_vpn_ftp_nsg",
            "azurerm_public_ip.team3_vpn_ip",
            "azurerm_resource_group.team3_rg",
            "azurerm_subnet.team3_gateway_subnet",
            "azurerm_virtual_network.team3_vnet1",
            "azurerm_virtual_network_gateway.team3_vpn_gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "team3_basip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/publicIPAddresses/team3-pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.230.43.105",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "team3-pubip",
            "resource_group_name": "04-3team-bookey",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.team3_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "team3_load_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/publicIPAddresses/team3-lb-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.217.188.155",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "team3-lb-public-ip",
            "resource_group_name": "04-3team-bookey",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.team3_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "team3_loadip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/publicIPAddresses/team3-loadip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.141.42.40",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "team3-loadip",
            "resource_group_name": "04-3team-bookey",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.team3_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "team3_natip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/publicIPAddresses/team3-natip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.214.240.116",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "team3-natip",
            "resource_group_name": "04-3team-bookey",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.team3_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "team3_vpn_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/publicIPAddresses/team3-vpn-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.217.250.172",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "team3-vpn-public-ip",
            "resource_group_name": "04-3team-bookey",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.team3_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "team3_bas",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "20.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet2/subnets/team3-bas",
            "name": "team3-bas",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-3team-bookey",
            "virtual_network_name": "team3-vnet2"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "team3-bas",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "team3-vnet2"
          },
          "dependencies": [
            "azurerm_resource_group.team3_rg",
            "azurerm_virtual_network.team3_vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "team3_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "default_outbound_access_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet1/subnets/team3-db",
            "name": "team3-db",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-3team-bookey",
            "virtual_network_name": "team3-vnet1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "team3-db",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "team3-vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.team3_rg",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "team3_ftp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.6.0/24"
            ],
            "default_outbound_access_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet1/subnets/team3-ftp",
            "name": "team3-ftp",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-3team-bookey",
            "virtual_network_name": "team3-vnet1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "team3-ftp",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "team3-vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.team3_rg",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "team3_gateway_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.5.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet1/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-3team-bookey",
            "virtual_network_name": "team3-vnet1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "GatewaySubnet",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "team3-vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.team3_rg",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "team3_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet1/subnets/team3-nat",
            "name": "team3-nat",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-3team-bookey",
            "virtual_network_name": "team3-vnet1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "team3-nat",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "team3-vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.team3_rg",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "team3_web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet1/subnets/team3-web1",
            "name": "team3-web1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-3team-bookey",
            "virtual_network_name": "team3-vnet1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "team3-web1",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "team3-vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.team3_rg",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "team3_web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet1/subnets/team3-web2",
            "name": "team3-web2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-3team-bookey",
            "virtual_network_name": "team3-vnet1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "team3-web2",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "team3-vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.team3_rg",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "team3_natdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet1/subnets/team3-db",
            "nat_gateway_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/natGateways/team3-nat",
            "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet1/subnets/team3-db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.team3_nat",
            "azurerm_resource_group.team3_rg",
            "azurerm_subnet.team3_db",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "team3_natweb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet1/subnets/team3-web1",
            "nat_gateway_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/natGateways/team3-nat",
            "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet1/subnets/team3-web1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.team3_nat",
            "azurerm_resource_group.team3_rg",
            "azurerm_subnet.team3_web1",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "team3_natweb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet1/subnets/team3-web2",
            "nat_gateway_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/natGateways/team3-nat",
            "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet1/subnets/team3-web2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.team3_nat",
            "azurerm_resource_group.team3_rg",
            "azurerm_subnet.team3_web2",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "team3_vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "73fbef7b-419d-42e6-a238-8cd474441bb8",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet1",
            "location": "koreacentral",
            "name": "team3-vnet1",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "04-3team-bookey"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "team3-vnet1",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.team3_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "team3_vnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "20.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0cd02fb5-b6f1-419d-a4db-016bf75e4936",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet2",
            "location": "koreacentral",
            "name": "team3-vnet2",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "04-3team-bookey"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "team3-vnet2",
            "resource_group_name": "04-3team-bookey",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.team3_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "team3_vpn_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_route_translation_for_nat_enabled": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "10.0.5.254"
                    ],
                    "ip_configuration_name": "vnetGatewayConfig",
                    "tunnel_ip_addresses": [
                      "4.217.250.172"
                    ]
                  }
                ]
              }
            ],
            "dns_forwarding_enabled": false,
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworkGateways/team3-vpn-gateway",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/publicIPAddresses/team3-vpn-public-ip",
                "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet1/subnets/GatewaySubnet"
              }
            ],
            "ip_sec_replay_protection_enabled": true,
            "location": "koreacentral",
            "name": "team3-vpn-gateway",
            "private_ip_address_enabled": false,
            "remote_vnet_traffic_enabled": false,
            "resource_group_name": "04-3team-bookey",
            "sku": "VpnGw1",
            "type": "Vpn",
            "virtual_wan_traffic_enabled": false,
            "vpn_client_configuration": [
              {
                "address_space": [
                  "172.16.201.0/24"
                ],
                "root_certificate": [
                  {
                    "name": "team3-root-cert",
                    "public_cert_data": "MIIDpTCCAo0CFDXrS5v8WFJo1ZPD1cqqW00AHKbVMA0GCSqGSIb3DQEBCwUAMIGO\r\nMQswCQYDVQQGEwJLUjEOMAwGA1UECAwFU2VvdWwxDjAMBgNVBAcMBVNlb3VsMQ4w\r\nDAYDVQQKDAV0ZWFtMzETMBEGA1UECwwKdGVhbTMtY2VydDEaMBgGA1UEAwwRdGVh\r\nbTMtUm9vdENlcnQtVjIxHjAcBgkqhkiG9w0BCQEWD2FkbWluQHRlYW0zLmNvbTAe\r\nFw0yNTExMjIwODEyMDNaFw0zNTExMjAwODEyMDNaMIGOMQswCQYDVQQGEwJLUjEO\r\nMAwGA1UECAwFU2VvdWwxDjAMBgNVBAcMBVNlb3VsMQ4wDAYDVQQKDAV0ZWFtMzET\r\nMBEGA1UECwwKdGVhbTMtY2VydDEaMBgGA1UEAwwRdGVhbTMtUm9 [...]
                  }
                ],
                "vpn_auth_types": [
                  "Certificate"
                ],
                "vpn_client_protocols": [
                  "SSTP"
                ]
              }
            ],
            "vpn_type": "RouteBased"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.team3_vpn_ip",
            "azurerm_resource_group.team3_rg",
            "azurerm_subnet.team3_gateway_subnet",
            "azurerm_virtual_network.team3_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet1_to_vnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet1/virtualNetworkPeerings/peer-vnet1-to-vnet2",
            "name": "peer-vnet1-to-vnet2",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet2",
            "resource_group_name": "04-3team-bookey",
            "use_remote_gateways": false,
            "virtual_network_name": "team3-vnet1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.team3_rg",
            "azurerm_virtual_network.team3_vnet1",
            "azurerm_virtual_network.team3_vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet2_to_vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet2/virtualNetworkPeerings/peer-vnet2-to-vnet1",
            "name": "peer-vnet2-to-vnet1",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-3team-bookey/providers/Microsoft.Network/virtualNetworks/team3-vnet1",
            "resource_group_name": "04-3team-bookey",
            "use_remote_gateways": false,
            "virtual_network_name": "team3-vnet2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.team3_rg",
            "azurerm_virtual_network.team3_vnet1",
            "azurerm_virtual_network.team3_vnet2"
          ]
        }
      ]
    }
  ]
}